Modificando el metodo newInstance de la clase Class por algo mas moderno